2007-04-28	v 0.1 ~ Marzo Sette Torres Junior <marzojr@yahoo.com>
	* New sprite for male bucket-heade avatar, made by Skutarth. Also, removed
	  the silly fully-armored paperdoll for the bucket-headed avatars.

2007-04-15    <jeff@mini.nerble.net>

	* imagewin/imagewin.cc (Image_window): Added Hq3x scaler.

2007-04-13    <jeff@mini.nerble.net>

	* imagewin/hq2x.cc (srcx): Added Hq2x scaler.

2007-04-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed screwed-up palettes in SI mods with custom mainshp.flx files.
	* You can now add/change midi music by placing custom ADLIBMUS.DAT and/or
	  MT32MUS.DAT files in the patch dir.

2007-04-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Improved large-avatar handling, fixing a few bugs it introduced for
	  normal-sized avatars.
	* Improved Actor::Find_Blocking, and modified Actor::move_aside to check
	  the orthogonal directions first.
	* Improved slightly pace schedule.
	* Jukebox eggs now ignore delta-z when determining if they should hatch.

2007-04-04  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Improved skin scrolling functions.
	* ES now saves differential patches for VGA files. This will NOT affect
	  "patch" VGA files that already exist.
	* ES now exports to/imports from shp files into VGA files.

2007-04-02  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Avatar skins can now optionally specify whether or not the shape data
	  from the avatar's default skins will overwrite the shape data from the
	  skin's actual shape.
	* Versioning of text data files actually work now.
	* Better handling for movement of larger avatars.

2007-03-31  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Added new title screens for Keyring mod and SI Fixes.
	* Added build scripts/instructions for SI Fixes. Also, improved the Keyring
	  make scripts.
	* Added new avatars from Avatar Pack to Keyring mod.
	* You can now patch the keybindings on a per-mod basis. The Keyring mod has
	  been updated to reflect that.