@@ -1,3 +1,7 @@
+2007-05-14	v 0.1 ~ Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* miscinf.cc: Fixed problem reading textmsg files with crlf's.
+	* monsters.cc: Monsters with high shapes used wrong usecode function.
+
 2007-04-28	v 0.1 ~ Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* New sprite for male bucket-heade avatar, made by Skutarth. Also, removed
 	  the silly fully-armored paperdoll for the bucket-headed avatars.
